# kvk-data-service-experiment

./: .env.example  .gitignore  KVK.md  LICENSE  README.md  mise.toml  pyproject.toml
.github/: dependabot.yml  renovate.json
src/kvk_data_service_experiment/: addressing.py  cache.py  cli.py  client.py  config.py  exceptions.py  service.py  signature.py
test/fixtures/: test.key  test.pem
test/test_kvk_data_service_experiment/: conftest.py  test_addressing.py  test_cache.py  test_service.py  test_service_integration.py  test_signature.py
