[project]
name = "kvk-data-service-experiment"
version = "0.1.0"
description = "Experiment with the KVK Data Service SOAP API"
requires-python = ">=3.12"
dependencies = [
    "zeep>=4.3.3",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.14.2",
    "loguru>=0.7.3",
    "xmlsec>=1.3.17",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pyright>=1.1.400",
    "pytest>=9.0.3",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kvk_data_service_experiment"]

[tool.pytest.ini_options]
markers = ["integration: hits the live KVK API (requires certificates and network)"]
addopts = "-m 'not integration'"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"
line-length = 120
respect-gitignore = false # TODO(tomdewildt): remove later

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
